--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "live-server": "^1.2.1",
     "react": "16.0.0",
     "react-dom": "16.0.0",
+    "react-modal": "^3.9.1",
     "validator": "^11.1.0",
     "webpack": "^4.39.1",
     "webpack-dev-server": "^3.7.2"
